kubernetes/production/app-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jw-public
spec:
  template:
    spec:
      containers:
        - name: jw-public
